# juegoauto

./: README.md  get_objetivo.py  hello.py  pp.py  ppa.py  pyproject.toml
coordinate-picker/: README.md
coordinate-picker/src/: coordinate_picker.py  main.py
coordinate-picker/src/utils/: __init__.py
